implemented base class for geometry operations and updated Line.java accordingly